--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
+		"@types/uuid": "^9.0.0",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -23,6 +24,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"frappe-gantt": "^1.0.4"
+		"frappe-gantt": "^1.0.4",
+		"uuid": "^9.0.0"
 	}
 }
